--- a/HelpNDoc.html
+++ b/HelpNDoc.html
@@ -123,7 +123,7 @@
             
             data-openlvl="1"
         >
-            <ul><li id="Home" ><a href="Home.html">Home</a></li><li id="Short-cutKeysKeyBinds" ><a href="Short-cutKeysKeyBinds.html">Short-cut Keys (Key Binds)</a></li><li id="ButtonsRedBorder" ><a href="ButtonsRedBorder.html">Buttons (Red Border)</a></li><li id="Menus" ><a href="Menus.html">Menus</a></li><li id="MiscControlsBlueBorder" ><a href="MiscControlsBlueBorder.html">Misc Controls (Blue Border)</a></li></ul>
+            <ul><li id="index" ><a href="index.html">Home</a></li><li id="Short-cutKeysKeyBinds" ><a href="Short-cutKeysKeyBinds.html">Short-cut Keys (Key Binds)</a></li><li id="ButtonsRedBorder" ><a href="ButtonsRedBorder.html">Buttons (Red Border)</a></li><li id="Menus" ><a href="Menus.html">Menus</a></li><li id="MiscControlsBlueBorder" ><a href="MiscControlsBlueBorder.html">Misc Controls (Blue Border)</a></li></ul>
         </div>
       </div>  <!-- /contents-->
       
@@ -167,7 +167,7 @@
 
     <article>
         <div id="topic-content" class="container-fluid" 
-		  data-hnd-id="Home"
+		  data-hnd-id="index"
 		  data-hnd-context="0"
 		  data-hnd-title="Home"
 		>
