--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <article>
         <div id="topic-content" class="container-fluid" 
-		  data-hnd-id="Home"
+		  data-hnd-id="index"
 		  data-hnd-context="0"
 		  data-hnd-title="Home"
 		>
